syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Empty {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message Orders {
  repeated Order orders = 1;
}

message CreateOrderInput {
  float price = 1;
  float tax = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderInput) returns (Order) {}
  rpc ListOrders(Empty) returns (Orders) {}
}
